added css fix so background also works on production

--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ a{
 body {
 	padding:0;
 	margin:0;
-        background-image :url(/images/index-bg.jpg);
+        background-image :url("../images/index-bg.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
