--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@ a{
 	float: right;
 	margin-left:10px;
 }
+#logout-button #logout{
+    float:right;
+    margin: -36px 20px 0px 0px;
+}
 
 #header input,
 #header button, 
@@ -149,8 +153,8 @@ p.accountCreated {
 #newPost {
 	margin-right:auto;
 	margin-left:auto;
-	padding-top:100px;
-	width: 50vw;
+	padding-top:80px;
+	width: 50vw;     
 }
 
 p.new-post {
@@ -160,6 +164,34 @@ p.new-post {
 #newPost textarea {
 	width:100%;
 	height: 100px;
+        resize: none;
+}
+
+/** Post and comments render styles **/
+
+.renderpostbox{
+    width:50vw;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    
+}
+
+.avatar{
+    width:50px;
+    height:50px;
+    position: inline-block;
+    float:left;
+}
+
+.postername{
+    color:aquamarine;
+    font-size: 33px;
+    margin-left: 70px;
+}
+
+.postrender{
+    color:white;
 }
 
 /** Footer styles **/
