--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,10 @@ p.new-post {
     
 }
 
+.postwrapper{
+  
+}
+
 .avatar{
     width:50px;
     height:50px;
@@ -203,6 +207,24 @@ p.new-post {
 	float:right;
 	margin-right:5px;
 }
+
+/** Comment area styles **/
+.commentsection{
+    margin-left: 20%;
+    border-top: 1px solid #fff;
+   
+}
+
+.addcomment{
+    color:#fff;
+    display:inline;
+}
+
+.commentarea{
+    width:80%;
+    display: inline;
+}
+
 
 /** Footer styles **/
 
